# python-todo-app

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  pytest.ini  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/misc/: sekvenssikaaviot.txt
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: todo.py  user.py
src/gui/: create_user_view.py  gui.py  login_view.py  todos_view.py
src/repositories/: todo_repository.py  user_repository.py
src/services/: todo_service.py
src/tests/: conftest.py
src/tests/repositories/: todo_repository_test.py  user_repository_test.py
src/tests/services/: todo_service_test.py
src/ui/: create_user_view.py  login_view.py  todos_view.py  ui.py
