[tool.poetry]
name = "python-todo-app"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.1"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
autopep8 = "^1.5.7"
pytest = "^6.2.5"
pytest-dotenv = "^0.5.2"
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
