[tool.poetry]
name = "python-todo-app"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
invoke = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
autopep8 = "^2.0.0"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
