[project]
name = "python-todo-app"
version = "0.1.0"
description = ""
authors = [
    { name = "HY Tietojenkäsittelytieteen osasto" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "invoke>=2.2.0,<3.0.0"
]

[dependency-groups]
dev = [
    "pylint>=3.1.0,<4.0.0",
    "autopep8>=2.0.0,<3.0.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-dotenv>=0.5.2,<1.0.0",
    "coverage>=7.13.5,<8.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
